smooth scrolling, fixed some line breaks

--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,10 @@
 		<link rel="icon" href="favicon2.png" />
 <style>
 
+  html {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: source;
   src: url("SourceCodePro-Regular.otf") format("opentype");
@@ -360,7 +364,7 @@ color:#A5A5A5;
   position: absolute;
   top: 2768px;
   left: 333px;
-  width: 230px;
+  width: 240px;
   height: 103px;
   font-size: 14pt;
   text-align: right;
@@ -621,8 +625,8 @@ Information
 Yeld is a <br>
 deflationary<br>
 yield optimization<br>
-engine,<br>
-designed 
+engine,
+designed <br>
 for farmers.
 <br>
 
